# Proyec-2-PrograII

./: CadenaADN-Pacientes.csv  ListaSecuenciaEnfermedad.JSON  README.md
src/InformePacientes/: InformePacientes.csv
src/Proyecto 2_rehhechho/: Analist.cpp  Analist.h  Analyst.cpp  Analyst.h  ArrayIterator.cpp  ArrayIterator.h  ArrayTemplate.cpp  ArrayTemplate.h  BasicComponent.cpp  BasicComponent.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  CadenaADN-Pacientes.csv  ComponenteBase.cpp  ComponenteBase.h  Control.cpp  Control.h  Disease.cpp  Disease.h  DiseaseCSVTransformer.cpp  DiseaseCSVTransformer.h  DiseaseJSONTransformer.cpp  DiseaseJSONTransformer.h  FileManager.cpp  FileManager.h  ICSVTransformer.cpp  ICSVTransformer.h  IFiles.h  IReader.h  IWriter.h  InterfazColeccion.h  InterfazIterator.h  IterableCollection.h  Iterator.h  JSONReader.h  JSONTransformer.cpp  JSONTransformer.h  (+29 more)
